--- a/HW6Nodejs/views/about.ejs
+++ b/HW6Nodejs/views/about.ejs
@@ -8,6 +8,15 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p>This is the about page!</p>
-    <p>Wanna chance a game of draw poker?</p>
+    <p>Wanna chance a game of draw poker?</p><br />
+    <br />
+    <br />
+    <br />
+    <ul>
+      <li><a href="about">About</a></li>
+      <li><a href="users">Users</a></li>
+      <li><a href="index">Index</a></li>
+      <!-- <li><a></a></li> -->
+    </ul>
   </body>
 </html>
