--- a/HW6Nodejs/views/index.ejs
+++ b/HW6Nodejs/views/index.ejs
@@ -8,6 +8,15 @@
     <h1><%= title %></h1>
     <p>Welcome to Express</p>
     <p>This is the index page!</p>
-    <p>Wish to engage in a game of Rock, Paper, Scissors, Lizard, Spock?</p>
+    <p>Wish to engage in a game of Rock, Paper, Scissors, Lizard, Spock?</p><br />
+    <br />
+    <br />
+    <br />
+    <ul>
+      <li><a href="about">About</a></li>
+      <li><a href="users">Users</a></li>
+      <li><a href="index">Index</a></li>
+      <!-- <li><a></a></li> -->
+    </ul>
   </body>
 </html>
