--- a/HW6Nodejs/views/users.ejs
+++ b/HW6Nodejs/views/users.ejs
@@ -8,6 +8,15 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p>This is the users page!</p>
-    <p>Would you enjoy an opportunity to parlay a game of Chess?</p>
+    <p>Would you enjoy an opportunity to parlay a game of Chess?</p><br />
+    <br />
+    <br />
+    <br />
+    <ul>
+      <li><a href="about">About</a></li>
+      <li><a href="users">Users</a></li>
+      <li><a href="index">Index</a></li>
+      <!-- <li><a></a></li> -->
+    </ul>
   </body>
 </html>
